[project]
name = "social-network-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Shishkin",email = "ivanshishkin99@bk.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "cryptography (>=45.0.6,<46.0.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
