[project]
name = "social-network-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Shishkin",email = "ivanshishkin99@bk.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "cryptography (>=45.0.6,<46.0.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "httptools (>=0.6.4,<0.7.0)",
    "orjson (>=3.11.1,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "fastapi-cache2[redis] (>=0.2.2,<0.3.0)",
    "celery (>=5.5.3,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false


[tool.black]
line_length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
